task5/tests/group/tests/output/t18.out
lli: lli: tests/group/tests/output/t18.ll:28:17: error: use of undefined value '%-22042'
%t1 = trunc i32 %-22042 to i8
                ^

